tests/semantic/assign_err7.expected

Semantic Error [line 6]: value: "notArray"
	Index attempt on non-array variable.
