tests/semantic/assign_err7.mtp
(*try to index into a variable*)

var notArray : integer;

begin
	notArray(0) := 1
end.